--- a/pay/src/main/resources/application.yml
+++ b/pay/src/main/resources/application.yml
@@ -43,9 +43,9 @@ spring:
   profiles: docker
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql-1621826572.mysql.svc.cluster.local:3306/paydb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://mysql-1623206525.mysql.svc.cluster.local:3306/paydb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
-    password: U9W3czSS7i
+    password: 0qIwAbPJ1e
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
