--- a/course/kubernetes/deployment.yml
+++ b/course/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: course
-          image: 855196134209.dkr.ecr.us-east-1.amazonaws.com/lecture-main/course:latest 
+          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/lecture-main/course:latest 
 #          image: username/course:latest
           ports:
             - containerPort: 8080
