--- a/gateway/kubernetes/deployment.yml
+++ b/gateway/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: gateway
-#          image: 855196134209.dkr.ecr.us-east-1.amazonaws.com/lecture-main/gateway:latest 
-          image: username/gateway:latest
+          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/lecture-main/gateway:latest 
+#          image: username/gateway:latest
           ports:
             - containerPort: 8080
