--- a/pay/kubernetes/deployment.yml
+++ b/pay/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: pay
-          image: 855196134209.dkr.ecr.us-east-1.amazonaws.com/lecture-main/pay:latest 
+          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/lecture-main/pay:latest 
 #          image: username/pay:latest
           ports:
             - containerPort: 8080
